--- a/client/web-warga/src/components/Button/Button.css
+++ b/client/web-warga/src/components/Button/Button.css
@@ -63,7 +63,7 @@
 }
 
 .button--success:hover:not(:disabled) {
-  background-color: #388E3C;
+  background-color: var(--accent-primary-hover);
 }
 
 .button--danger {
@@ -72,7 +72,7 @@
 }
 
 .button--danger:hover:not(:disabled) {
-  background-color: #D32F2F;
+  background-color: var(--border-secondary);
 }
 
 .button--outline {
